Added alternative get_network and create_network option - initial testing passes...
